--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <footer>
 <p>©2018 Rodrigo Manuel Loyo Martinez Costa Rica <a href="http://www.byui.edu/online">BYUI-Idaho Online Learning</a>
 </footer>
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="css/main.css">
 </body>
+    
 </html>
 
